--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <!-- index.html -->
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAii0BtC5ZauNuUp3vhEqrVnjl3TsRkS2E"></script> -->
+
   </body>
 </html>
