--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="./Logo.ico" />
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Хилийн боомтын захиргаа</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-    <!-- index.html -->
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAii0BtC5ZauNuUp3vhEqrVnjl3TsRkS2E"></script> -->
 
-  </body>
+<head>
+  <title>Хилийн Боомтын Захиргаа | Khiliin boomtiin zakhirgaa | Boomtiin zahirgaa</title>
+  <meta charset="UTF-8" />
+  <meta name="title"
+    content="Хилийн боомтын захиргаа | hiliin boomtiin zahirgaa | khiliin boomtiin zakhirgaa | boomtiin zahirgaa | Боомтын захиргаа | Боомт | Хилийн боомт | Boomt | Boomtiin zakhirgaa" />
+  <meta name="description"
+    content="Хилийн боомтын захиргаа | Info@bpa.gov.mn | Хилийн боомтын захиргаа байгуулах тухай | Хилийн боомтын захиргаа чиг үүрэг  | Боомтуудын байршил | Боомтын тухай">
+  <meta property="og:type" content="article">
+  <meta property="og:title"
+    content="Хилийн боомтын захиргаа | hiliin boomtiin zahirgaa | khiliin boomtiin zakhirgaa | boomtiin zahirgaa | Боомтын захиргаа | Боомт | Хилийн боомт | Boomt | Boomtiin zakhirgaa">
+  <meta property="og:url" content="https://bpa.gov.mn">
+  <meta property="og:description"
+    content="Хилийн боомтын захиргаа | Info@bpa.gov.mn | Хилийн боомтын захиргаа байгуулах тухай | Хилийн боомтын захиргаа чиг үүрэг  | Боомтуудын байршил | Боомтын тухай">
+
+  <meta property="og:site_name" content="https://bpa.gov.mn">
+
+
+  <link rel="icon" href="./Logo.ico" />
+  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+  <!-- index.html -->
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAii0BtC5ZauNuUp3vhEqrVnjl3TsRkS2E"></script> -->
+
+</body>
+
 </html>
